src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_activity_group_collapsed_70x24.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Complex task.

   ▸ 6 calls · 2 thoughts · 5s · 1 error

 Completed with one error.















›

 ACT                                             0% (0) m off [CWD]
