src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_bash_running_70x24.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Run the tests.

 ◜ bash ({"cmd":"cargo test"})

















Working
›
 ACT                                               0% (0) m off [CWD]
