src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_code_block_70x24.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Explain this snippet.

 Here is the explanation:

 fn main() {
     println!("hello");
 }

 The main function is the program entry point. It calls println!
 which writes to stdout. This is very idiomatic Rust and the
 canonical hello-world example.









›

 ACT                                             0% (0) m off [CWD]
