src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_empty_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

   UwU sqwai (v0.1.0)
























────────────────────────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────────────────────────
 ACT                                                          cache 0% · 0% · 0 · m  ef:off [CWD]
