src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_empty_70x24.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

   UwU sqwai (v0.1.0)
   type to start

















──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                            cache 0% · 0% · 0 · m  ef:off [CWD]
