src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_many_tools_flat_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Complex task.

   ✓ tool_0  {}
   ✓ tool_1  {}
   ✓ tool_2  {}
   ✓ tool_3  {}
   ✗ risky_tool  {"x":1}
   ✓ cleanup  {}
 Completed with one error.

















›

 ACT                                                                             0% (0) m off [CWD]
