src/tui/app/tests/snapshots/sqwai__tui__app__tests__settings__chat_models_popup_100x30.snap
---
source: src/tui/app/tests/settings.rs
expression: s
---

 › Hello

 Hi there!





                                             Models · p

             NAME                  ID                              CONTEXT  EFFORT
             m *                   test-model                           1k  off
            ────────────────────────────────────────────────────────────────────────────
             + add model
             · switch active model
             · check connection
             · edit provider
             · delete model
             · delete provider







›

 ACT                                                             cache 0% · 0% · 0 · m  off [CWD]
